--- a/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
+++ b/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
@@ -1,2 +1,2 @@
-<input type="text"   placeholder="Digite sua nova task aqui..." [(ngModel)]="addItemTaskList"
+<input type="text"   placeholder="Digite sua nova task aqui....." [(ngModel)]="addItemTaskList"
 (keyup.enter)="submitItemTaskList()">
